--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ body {
     font-weight: 900;
     font-family: system-ui, sans-serif;
     margin-left: 25px;
-    margin-top: 80px;
+    margin-top: 75px;
     color: #fff;
 }
 
@@ -69,7 +69,7 @@ body {
     height: 200px;
     margin: 10px 10px 10px 10px;
     border-radius: 20px;
-    transition: 0.5s;
+    transition: 0.5s ease;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,7 +77,7 @@ body {
 }
 
 .rectangulo-con-efectos:hover {
-    filter: drop-shadow(0 0 10px rgb(212, 166, 66));
+    transform: scale(0.9);
 }
 
 .cuadrado {
@@ -97,7 +97,7 @@ body {
     height: 200px;
     margin: 10px 10px 10px 10px;
     border-radius: 20px;
-    transition: 0.5s;
+    transition: 0.5s ease;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -105,7 +105,7 @@ body {
 }
 
 .cuadrado-con-efectos:hover {
-    filter: drop-shadow(0 0 10px rgb(212, 166, 66));
+    transform: scale(0.9);
 }
 
 .rectangulo-info {
