--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ body {
 
 .texto-rectangulo {
     width: 650px;
-    text-align: justify;
+    text-align: left;
     font-size: 17px;
     font-weight: 800;
     font-family: system-ui, sans-serif;
