--- a/index.css
+++ b/index.css
@@ -108,6 +108,24 @@ body {
     transform: scale(0.9);
 }
 
+
+.cuadrado-chico-con-efectos {
+    width: 165px;
+    height: 165px;
+    margin: 10px 10px 10px 10px;
+    border-radius: 20px;
+    transition: 0.5s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.cuadrado-chico-con-efectos:hover {
+    transform: scale(0.9);
+}
+
+
 .rectangulo-info {
     width: 720px;
     height: 120px;
