--- a/index.css
+++ b/index.css
@@ -7,6 +7,54 @@ body {
     user-select: none;
 }
 
+  .blob {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 50% 50% 40% 60% / 60% 40% 60% 40%;
+    animation: deformar 8s ease-in-out infinite, colorBlob 10s ease-in-out infinite alternate;
+    filter: blur(60px);
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  .blob:nth-child(1) {
+    top: 10%;
+    left: 20%;
+  }
+
+  .blob:nth-child(2) {
+    bottom: -200px;
+    right: 15%;
+  }
+
+  .blob:nth-child(3) {
+    bottom: -500px;
+    left: 15%;
+  }
+
+  @keyframes deformar {
+    0% {
+      border-radius: 50% 50% 40% 60% / 60% 40% 60% 40%;
+      transform: scale(1) rotate(0deg);
+    }
+    50% {
+      border-radius: 60% 40% 60% 40% / 50% 60% 40% 50%;
+      transform: scale(1.1) rotate(180deg);
+    }
+    100% {
+      border-radius: 50% 50% 40% 60% / 60% 40% 60% 40%;
+      transform: scale(1) rotate(360deg);
+    }
+  }
+
+  @keyframes colorBlob {
+    0%   { background: rgba(255, 255, 255, 0.2); }
+    50%  { background: rgba(255, 182, 193, 0.3); }
+    100% { background: rgba(173, 216, 230, 0.3); }
+  }
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -207,9 +255,56 @@ body {
     }
 }
 
-@media screen and (max-width: 768px) {
+
+
+
+
+#reproductor {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #111;
+    padding: 10px 15px;
+    border-radius: 12px;
+    color: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    z-index: 9999;
+    font-family: sans-serif;
+  }
+
+  #toggleBtn {
+    background-color: #333;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
+  #toggleBtn:hover {
+    background-color: #555;
+  }
+
+  @media screen and (max-width: 768px) {
     .container {
        width: 380px;
     }
-}
 
+    .blob {
+        display: none;
+    }
+
+    #reproductor {
+        padding: 5px 10px;
+        font-size: 10px;
+        bottom: 10px;
+    }
+
+    #toggleBtn {
+        padding: 6px 10px;
+      }
+}
